# multigroupby

./: .bumpversion.cfg  .travis.yml  README.md  README.rst  setup.cfg  tox.ini
src/multisplitby/: __init__.py
tests/: test_multisplitby.py
