##########################
# Setup.py Configuration #
##########################
[metadata]
name = multisplitby
version = 0.0.2-dev
url = https://github.com/cthoyt/multisplitby
download_url = https://github.com/cthoyt/multisplitby/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/multisplitby/issues
    Source Code = https://github.com/cthoyt/multisplitby
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
license = MIT
license_file = LICENSE
description = Split an iterable into multiple using arbitrary predicates.
long_description = file: README.rst
keywords =
    iteration

[options]
python_requires = >=3.5
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = true

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = multisplitby

[coverage:paths]
source =
    src/multisplitby
    .tox/*/lib/python*/site-packages/multisplitby

[coverage:report]
show_missing = True
